[gd_scene load_steps=3 format=3 uid="uid://dmgj5yx7pdi2k"]

[ext_resource type="PackedScene" uid="uid://b78vg0u6521nv" path="res://scenes/game/levels/spectacle_select/spectacle_select.tscn" id="1_6tmc8"]
[ext_resource type="Script" path="res://scenes/game/levels/spectacle_select_wheel/level_spectacle_select_wheel.gd" id="1_prgmn"]

[node name="SpectacleSelectWheel" type="Node2D"]
script = ExtResource("1_prgmn")

[node name="SpectacleSelect1" parent="." instance=ExtResource("1_6tmc8")]
rotation = 0.197222
metadata/_edit_lock_ = true

[node name="SpectacleSelect2" parent="." instance=ExtResource("1_6tmc8")]
rotation = 0.589921
layer_id = 2
metadata/_edit_lock_ = true

[node name="SpectacleSelect3" parent="." instance=ExtResource("1_6tmc8")]
rotation = 0.98262
layer_id = 3
metadata/_edit_lock_ = true

[node name="SpectacleSelect4" parent="." instance=ExtResource("1_6tmc8")]
rotation = 1.37532
layer_id = 4
metadata/_edit_lock_ = true
